--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm Aashutosh Trivedi
+title: Data Science by Aashutosh Trivedi
 description: > # this means to ignore newlines until "baseurl:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
@@ -7,6 +7,10 @@ permalink: ':title/'
 baseurl: "/100-Days-of-DataScience" # the subpath of your site, e.g. /blog
 url: "https://github.com/AashutoshTrivedi" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
+
+collections:
+  index:
+    output: true
 
 # Author Settings
 author: 100-Days-of-DataScience # add your name
